# posefusion

./: .gitignore  CMakeLists.txt  README.md  arr_openpose_pose_estimates_same_person_1m_apart  calibration.sh  camera-calibration.cpp  cameraParameterReader.cpp  image-grab.cpp  openpose_python.py  posefusion-client.cpp  posefusion-client.py  posefusion-client2.cpp  posefusion-server.cpp  posefusion.cpp
Docs/: Experimental Setup.md  RunningInfo.md  Thesis and Methodology Doc.md
calibration_images/: cmd_output.txt  cmd_output_all.txt
grgTmp/: log_grg_l1  log_grg_l2
install/: #install_posefusion.sh#  README.md  install_posefusion.sh  requirements.txt
opencv_based_calibration/: CMakeLists.txt  README.md  camera_calibration  fisheye_camera_calibration  fisheye_camera_calibration.cpp  fisheye_camera_calibration.py  in_VID5.xml  in_VID5_fisheye.xml  out_fisheye_camera_data.xml  out_logitech_brio_camera_data.xml
python/: affine.npz  calib1.npz  calibration.py  csvToArray.cpp  fisheye_posefusion.py  fisheye_undistort.py  grg_ocam_calibration.txt  grg_ocam_calibration_copy.txt  posefusion.py  posefusion_4cam.py  projections.npz  publish_test_body.py  replay.py  replay2camera.py  rigid_transform_3D_test.py  singlecam_stereo.py  skel.py  skel_plot copy.py  skel_plot.py  test_fisheyePosefusion.py  verify_published_msg.py  videoCapture.py  videoCaptureMultiCam.py
python/logs/: log_calib2_l1  log_calib2_l2  log_calib2_l3  log_calib2_l4  log_two11_l1  log_two11_l2  log_two11_l3  log_two11_l4  log_twoMove11_l1  log_twoMove11_l2  log_twoMove11_l3  log_twoMove11_l4
